--- a/README
+++ b/README
@@ -1,25 +1,24 @@
-# UniClient
+# SexyCoders
 
 ==========================================================================
 
-An online, completely modular, company management platform, for anyone, 
-anywhere! 
+A group of very sexy coders creating IT solutions inside a friendly and modern ecosystem.
 
-Documentation on how to use the application and how to contribute can also 
+Documentation on how to use it and how to contribute can also 
 be found online at: 
     https://docs.uniclient.org
 
 Text files can be found under 'Documentation' but it is not recommended. 
 For any questions please feel free to reach out by creating an issue on 
-any of our git mirrors.
+any of our git mirrors or reaching out via support@sexycoders.org .
 
 If you are a developer wishing to contribute to our work, please read the
 information under 'for-developers' aiming to help you in your journey!
 
 When you feel ready please raise a merge request in one of our git mirrors
 and describe in detail what you have accomplished. We will then reach out 
-to you if we need to !
+to you if we need to!
 
-If you are looking to develop community modules, please read the 
+If you are specifically looking to develop community modules, please read the 
 corresponding documentation, or visit 
     https://docs.uniclient.org/contribute/community-modules
